[gd_scene load_steps=2 format=3 uid="uid://c4q8j8y3yv2gw"]

[ext_resource type="Script" uid="uid://cmlgqs8w4tmtt" path="res://src/core/character/Base/CharacterBox.gd" id="1_script"]

[node name="CharacterBox" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="MarginContainer/HBoxContainer/PortraitContainer"]
layout_mode = 2
expand_mode = 1
stretch_mode = 6

[node name="InfoContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Character Name"

[node name="ClassLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
text = "Character Class"

[node name="StatsContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/InfoContainer"]
layout_mode = 2
columns = 6

[node name="ReactionsLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "REA"

[node name="ReactionsValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "3"

[node name="SpeedLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "SPD"

[node name="SpeedValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "3"

[node name="CombatSkillLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "CS"

[node name="CombatSkillValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "+0"

[node name="ToughnessLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "TGH"

[node name="ToughnessValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "3"

[node name="SavvyLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "SAV"

[node name="SavvyValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "+0"

[node name="LuckLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "LCK"

[node name="LuckValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatsContainer"]
layout_mode = 2
text = "3"

[node name="StatusContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/InfoContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatusContainer"]
layout_mode = 2
text = "Status:"

[node name="StatusValue" type="Label" parent="MarginContainer/HBoxContainer/InfoContainer/StatusContainer"]
layout_mode = 2
text = "Healthy"
